NEWS
0.39-3
     o	The help files for 'pfilter' and 'mif' have been updated to explain how to use a variable number of particles in the particle filtering algorithm.

0.39-2
     o	When 'po' is a 'pomp'-class object with covariates, 'as.data.frame(po)' and 'as(po,"data.frame")' now contain columns for the covariates. 
     	The latter are interpolated, if necessary, at the observation times.

     o	Bug fix: when 'pfilter' is called with a single parameter vector supplied in the 'params' argument, these parameters are copied into the 'params' slot of the resulting 'pfilterd.pomp' object.
     	Before, this failed when the 'params' slot of the 'pomp' object was empty.
	A similar bug existed in 'traj.match' and has likewise been fixed.

     o	To eliminate warnings and confusion during package check, 'profile.design' has been replaced by 'profileDesign'.
     	For parallelism, 'slice.design' and 'sobol.design' have been replaced by 'sliceDesign' and 'sobolDesign', respectively.
     	The older forms are now deprecated and will be removed in a future release.

0.39-1
     o	New facilities for parameter transformation are provided.
     	New optional arguments 'parameter.transform' and 'parameter.inv.transform' to 'pomp' allow the user to specify transformations between natural and internal parameter scalings.
	A new option 'transfom' to 'coef' and 'coef<-' allows the user to get and set parameters on the natural scale.
	See 'pomp?coef' and the "intro_to_pomp" vignette for details and examples.
	Similarly, the 'conv.rec' method now takes an optional 'transform' argument.

     o	Minor improvements to the documentation.

0.38-5
     o	'pfilter' will now give an error if ever a non-finite likelihood (dmeasure value) is returned.
	Before, errors were only generated when dmeasure returned NA.

     o	'spect' now returns frequencies reflective of the observation times.
     	Before, the frequencies were given as fractions of the sampling frequency.

0.38-4